@@ -841,8 +841,8 @@ DRIVERNV(bsktball)      //Basket Ball (04/1987)
                         // Screech (1978)
 DRIVERNV(centauri)      //Centaur (1979)
 DRIVERNV(centaurj)      //Centaur (1979, alternate set)
-                        // Topaz (1979)
-                        // Skate Board (1980)
+DRIVERNV(topazi)        //Topaz (1979)
+DRIVERNV(skatebrd)      //Skate Board (1980)
 DRIVERNV(brvteam )      //Brave Team (1985)
 DRIVERNV(canasta )      //Canasta '86' (1986)
 DRIVERNV(lapbylap)      //Lap By Lap (1986)
